// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handler: mobilemail, client: apad 1`] = `
Object {
  "bunkerPlatform": "android",
  "bunkerPrefix": "mmapi-flags",
}
`;

exports[`handler: mobilemail, client: aphone 1`] = `
Object {
  "bunkerPlatform": "android",
  "bunkerPrefix": "mmapi-flags",
}
`;

exports[`handler: mobilemail, client: ipad 1`] = `
Object {
  "bunkerPlatform": "ios",
  "bunkerPrefix": "mmapi-flags",
}
`;

exports[`handler: mobilemail, client: iphone 1`] = `
Object {
  "bunkerPlatform": "ios",
  "bunkerPrefix": "mmapi-flags",
}
`;

exports[`handler: mobilepayment, client: apad 1`] = `
Object {
  "bunkerPlatform": "android",
  "bunkerPrefix": "trust-flags",
}
`;

exports[`handler: mobilepayment, client: aphone 1`] = `
Object {
  "bunkerPlatform": "android",
  "bunkerPrefix": "trust-flags",
}
`;

exports[`handler: mobilepayment, client: ipad 1`] = `
Object {
  "bunkerPlatform": "ios",
  "bunkerPrefix": "trust-flags",
}
`;

exports[`handler: mobilepayment, client: iphone 1`] = `
Object {
  "bunkerPlatform": "ios",
  "bunkerPrefix": "trust-flags",
}
`;

exports[`handler: undefined, client: apad 1`] = `
Object {
  "bunkerPlatform": "android",
  "bunkerPrefix": "mmapi-flags",
}
`;

exports[`handler: undefined, client: aphone 1`] = `
Object {
  "bunkerPlatform": "android",
  "bunkerPrefix": "mmapi-flags",
}
`;

exports[`handler: undefined, client: ipad 1`] = `
Object {
  "bunkerPlatform": "ios",
  "bunkerPrefix": "mmapi-flags",
}
`;

exports[`handler: undefined, client: iphone 1`] = `
Object {
  "bunkerPlatform": "ios",
  "bunkerPrefix": "mmapi-flags",
}
`;
